Fix undefined variable in notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -877,7 +877,7 @@
     "if not client.collection_exists(collection_name=COLLECTION_NAME):\n",
     "    client.create_collection(\n",
     "        collection_name=COLLECTION_NAME,\n",
-    "        vectors_config=VectorParams(size=VECTOR_SIZE, distance=Distance.COSINE),\n",
+    "        vectors_config=VectorParams(size=encoder.get_sentence_embedding_dimension(), distance=Distance.COSINE),\n",
     "    )\n",
     "points_to_upsert =[\n",
     "    PointStruct(\n",
